# nih-plug

./: Cargo.toml
crates/nih_plug/src/: editor.rs  prelude.rs
crates/nih_plug/src/wrapper/clap/: wrapper.rs
crates/nih_plug/src/wrapper/standalone/backend/: cpal.rs
crates/nih_plug_egui/src/: editor.rs  lib.rs  resizable_window.rs
