[workspace]
resolver = "3"
members = [
  "crates/nih_plug",
  "crates/nih_plug_derive",
  "crates/nih_plug_xtask",
  "crates/cargo_nih_plug",
  "crates/xtask",
  "crates/nih_plug_egui",
  "crates/nih_plug_iced",

  "baseview-adapters/egui-baseview",
  "baseview-adapters/iced-baseview",

  "examples/byo_gui_gl",
  "examples/byo_gui_softbuffer",
  "examples/byo_gui_wgpu",
  "examples/gain",
  "examples/gain_egui",
  "examples/gain_iced",
  "examples/midi_inverter",
  "examples/poly_mod_synth",
  "examples/sine",
  "examples/stft",
  "examples/sysex",
]
default-members = ["crates/nih_plug"]

[workspace.package]
edition = "2024"
rust-version = "1.85"
authors = [
  "Robbert van der Helm <mail@robbertvanderhelm.nl>",
  "Billy Messenger <billydm@noreply.codeberg.org>",
]
license = "ISC"
repository = "https://github.com/BillyDM/nih-plug"

[workspace.dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
atomic_float = "1.1"
atomic_refcell = "0.1"
bitflags = "2.11"
baseview = { git = "https://github.com/Wild-Surmise/baseview.git", rev = "5187acfc578f4fd10c247de6a39c19604e72fab6", default-features = false }
raw-window-handle = "0.5"
realfft = "3.0"
approx = "0.5.1"
crossbeam = "0.8"
open = "5.3.3"
triple_buffer = "9.0.0"
cfg-if = "1.0"
rtrb = "0.3.3"
semver = "1.0.27"
pollster = "0.4.0"
parking_lot = "0.12"
thiserror = "2.0"
tracing = "0.1"
egui = { version = "0.34.1", default-features = false, features = ["bytemuck"] }

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"
